...
  }

  if (currentUser.value == null) {
    UserNotFoundFolderContentScreen()
  } else {
    Scaffold(
        modifier = Modifier.testTag("folderContentScreen"),
        topBar = {
          Column {
            FolderContentTopBar(
                folder = folder.value,
                updatedName = updatedName,
                onUpdateName = { updatedName = it },
...
                navigationActions = navigationActions,
                notesToFlashcard = notesToFlashcard!!)
          }
          // Logic to show the dialog to update a folder

          if (showUpdateDialog) {
            FolderDialog(
                onDismiss = { showUpdateDialog = false },
                onConfirm = { name, vis ->
                  folderViewModel.updateFolder(
                      folder.value!!.copy(
                          name = name, visibility = vis, lastModified = Timestamp.now()))
                  updatedName = name
...
                  userViewModel = userViewModel,
                  onDismissRequest = { showCreateDialog = false },
                  mode = stringResource(R.string.create),
                  onSave = { navigationActions.navigateTo(Screen.DECK_MENU) },
                  folderId = folder.value!!.id)
            } else {
              NoteDialog(
                  onDismiss = { showCreateDialog = false },
                  onConfirm = { newName, visibility ->
                    val note =
                        Note(
                            id = noteViewModel!!.getNewUid(),
                            title = newName,
...
}

/** Screen that displays when a user is not found. */
@Composable
fun UserNotFoundFolderContentScreen() {
  Column(
      modifier = Modifier.fillMaxSize().testTag("userNotFoundScreen"),
      verticalArrangement = Arrangement.Center,
      horizontalAlignment = Alignment.CenterHorizontally) {
        Text(stringResource(R.string.user_not_found))
      }
  Log.e("FolderContentScreen", "User not found")
}
...
  var showFileSystemPopup by remember { mutableStateOf(false) }
  TopAppBar(
      colors =
          TopAppBarDefaults.topAppBarColors(containerColor = MaterialTheme.colorScheme.surface),
      title = {
        Row(
            modifier = Modifier.fillMaxWidth().testTag("folderContentTitle"),
            verticalAlignment = Alignment.CenterVertically) {
              // Update the updatedName state whenever the folder state changes to display it in the
              // title
              LaunchedEffect(folder?.name) {
                onUpdateName(folder?.name ?: context.getString(R.string.folder_name_not_found))
              }
...
              navigationActions.goBackFolderContents(
                  folder!!, userViewModel.currentUser.value!!, isDeckView)
              if (folder.parentFolderId == null) {
                folderViewModel.clearSelectedFolder()
              }
            },
            modifier = Modifier.testTag("goBackButton")) {
              Icon(imageVector = Icons.AutoMirrored.Outlined.ArrowBack, contentDescription = "Back")
            }
      },
      actions = {
        if (folder!!.isOwner(currentUser.value!!.uid)) {
          val menuItems =
...
                        Icon(imageVector = Icons.Default.Edit, contentDescription = "UpdateFolder")
                      },
                      onClick = {
                        onExpandedChange(false)
                        showUpdateDialog(true)
                      },
                      modifier = Modifier.testTag("updateFolderButton")),
                  CustomDropDownMenuItem(
                      text = { Text("Move Folder") },
                      icon = {
                        Icon(
                            imageVector = Icons.Default.FolderOpen,
                            contentDescription = "moveFolder")
                      },
                      onClick = {
                        onExpandedChange(false)
                        showFileSystemPopup = true
                      },
                      modifier = Modifier.testTag("moveFolderButton")),
                  CustomDropDownMenuItem(
                      text = { Text(stringResource(R.string.delete_folder)) },
                      icon = {
                        Icon(
                            painter = painterResource(id = R.drawable.folder_delete_icon),
                            contentDescription = "DeleteFolder")
                      },
                      onClick = {
                        onExpandedChange(false)
                        showDeleteFolderConfirmation = true
                      },
                      modifier = Modifier.testTag("deleteFolderButton")),
                  CustomDropDownMenuItem(
                      text = { Text(stringResource(R.string.delete_folder_contents)) },
                      icon = {
                        Icon(
                            painter = painterResource(id = R.drawable.delete_folder_contents),
                            contentDescription = "DeleteFolderContents")
                      },
                      onClick = {
                        onExpandedChange(false)
                        showDeleteFolderContentsConfirmation = true
                      },
                      modifier = Modifier.testTag("deleteFolderContentsButton")))

          if (!isDeckView) {
            menuItems +=
                CustomDropDownMenuItem(
                    text = { Text(stringResource(R.string.convert_folder_to_decks)) },
                    icon = {
...
                      onExpandedChange(false)
                      showFlashcardCreationPopup = true
                    },
                    modifier = Modifier.testTag("createFlashcardsButton"))
          }
          CustomDropDownMenu(
              modifier = Modifier.testTag("folderSettingsButton"),
              menuItems = menuItems,
              fabIcon = {
                Icon(imageVector = Icons.Default.MoreVert, contentDescription = "settings")
              },
              expanded = expanded,
              onFabClick = { onExpandedChange(true) },
...
                showDeleteFolderContentsConfirmation = false
              },
              onDismiss = { showDeleteFolderContentsConfirmation = false })
        }
        // Show the FileSystemPopup if requested
        if (showFileSystemPopup) {
          FileSystemPopup(
              onDismiss = { showFileSystemPopup = false },
              folderViewModel = folderViewModel,
              onMoveHere = { selectedFolder ->
                if (selectedFolder == folder) {
                  return@FileSystemPopup
                }
...
