...
        onDismissRequest = { showMoveOutDialog = false },
        title = {
          Box(modifier = Modifier.fillMaxWidth(), contentAlignment = Alignment.Center) {
            Text("Move note out of folder")
          }
        },
        confirmButton = {
          Button(
              onClick = {
                if (currentUser.value!!.uid == note.userId) {
                  // Move out will move the given note to the parent folder
                  val parentFolderId = navigationActions.popFromScreenNavigationStack()
                  if (parentFolderId != null) {
...
                }

            OutlinedTextField(
                value = name,
                onValueChange = { name = Folder.formatName(it) },
                label = { Text("Folder Name") },
                modifier = Modifier.testTag("inputFolderName"))

            OptionDropDownMenu(
                value = visibility?.toReadableString() ?: "Choose visibility",
                expanded = expandedVisibility,
                buttonTag = "visibilityButton",
                menuTag = "visibilityMenu",
                onExpandedChange = { expandedVisibility = it },
                items = Visibility.READABLE_STRINGS,
                onItemClick = { visibility = Visibility.fromReadableString(it) },
                modifier = Modifier.testTag("visibilityDropDown"),
                widthFactor = 0.94f)

            Row(modifier = Modifier.fillMaxWidth(0.92f), horizontalArrangement = Arrangement.End) {
              Button(onClick = onDismiss, modifier = Modifier.testTag("dismissFolderAction")) {
                Text("Cancel")
              }
              Button(
                  enabled = name.isNotEmpty() && visibility != null,
                  onClick = { onConfirm(name, visibility ?: Visibility.DEFAULT) },
                  modifier = Modifier.testTag("confirmFolderAction")) {
                    Text(action)
                  }
            }
          }
    }
  }
...
