...
    onExpandedFabChange: (Boolean) -> Unit,
    showCreateFolderDialog: (Boolean) -> Unit,
    showCreateItemDialog: (Boolean) -> Unit,
    isDeckView: Boolean = false,
) {
  CustomDropDownMenu(
      modifier = Modifier.testTag("createObjectOrFolder"),
      menuItems =
          listOf(
              CustomDropDownMenuItem(
                  text = {
                    if (!isDeckView) {
                      Text(stringResource(R.string.create_note))
...
                    }
                  },
                  onClick = {
                    onExpandedFabChange(false)
                    showCreateItemDialog(true)
                  },
                  modifier = Modifier.testTag("createDeckOrNote")),
              CustomDropDownMenuItem(
                  text = { Text(stringResource(R.string.create_folder)) },
                  icon = {
                    Icon(
                        painter = painterResource(id = R.drawable.folder_create_icon),
                        contentDescription = "createFolder")
                  },
                  onClick = {
                    onExpandedFabChange(false)
                    showCreateFolderDialog(true)
                  },
                  modifier = Modifier.testTag("createFolder"))),
...
